tests/compile-fail/Rule_2_2.rs
#[deny(dead_code)]

fn dead_code() {}

fn main() {}
